新增一个圆

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>muyang</title>
+	<style>
+		.box{
+			width: 200px;
+			height: 200px;
+			border-radius: %50;
+			background: #111;
+		}
+	</style>
 </head>
 <body>
 	<h1>博客</h1>
+	<div class="box"></div>
 </body>
 </html>
