--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
 		.box{
 			width: 200px;
 			height: 200px;
-			border-radius: %50;
+			border-radius: 50%;
 			background: #111;
+			margin: 0 auto;
+		}
+		img{
+			float: left;
+			margin: 100px;
 		}
 	</style>
 </head>
 <body>
-	<h1>博客</h1>
+	<h1>yiyiyiyi</h1>
 	<div class="box"></div>
+	<img src="./1.jpg" alt="" width="154px" height="400px">
+	<img src="./2.jpg" alt="" width="533px" height="400px">
 </body>
 </html>
