修改照片位置

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 			background: #111;
 			margin: 0 auto;
 		}
-		img{
-			float: left;
-			margin: 100px;
-		}
 	</style>
 </head>
 <body>
 	<h1>yiyiyiyi</h1>
 	<div class="box"></div>
+	<h1>快看 一个傻梓样</h1>
 	<img src="./1.jpg" alt="" width="154px" height="400px">
+	<h1>这还有一个 哈哈哈</h1>
 	<img src="./2.jpg" alt="" width="533px" height="400px">
 </body>
 </html>
